--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jobapp",
+  "name": "seeder",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
+    "@nextui-org/react": "^2.6.10",
     "@reduxjs/toolkit": "^2.5.0",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
